# mDrop

./: CMakeLists.txt  README.md  planning.md
src/Bluetooth/: BluetoothDeviceManager.cpp  BluetoothDeviceManager.h
src/Logger/: Logger.cpp  Logger.h
src/Main/: Main.cpp  Main.h
src/Networking/: NetworkManager.cpp  NetworkManager.h
src/Utils/: Singleton.h
